# ComfyUI_Text_Tools_SG

./: LICENSE  README.md  Text_Tools_Editor_SG.py  Text_Tools_Load_Text_From_Anywhere_SG.py  Text_Tools_Load_Text_SG.py  Text_Tools_Merge_Text_Multi_SG.py  Text_Tools_Merge_Text_SG.py  Text_Tools_Save_Text_File_SG.py  Text_Tools_Viewer_SG.py  __init__.py  pyproject.toml
.github/workflows/: publish_comfy_registry_action.yml
web/: Text_Tools_Editor_SG.js  Text_Tools_Load_Text_From_Anywhere_SG.js  Text_Tools_Load_Text_SG.js  Text_Tools_Save_Text_File_SG.js  Text_Tools_Viewer_SG.js
