[project]
name = "ComfyUI_Text_Tools_SG"
description = "Text Editor node with Markdown editing plus quick shortcuts, Text Viewer node, with extra features plus Text Merge, Text Save and Load Text from anywhere nodes."
version = "0.9.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/ShammiG/ComfyUI_Text_Tools_SG"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ShammiG/ComfyUI_Text_Tools_SG/blob/main/README.md"
"Bug Tracker" = "https://github.com/ShammiG/ComfyUI_Text_Tools_SG/issues"

[tool.comfy]
PublisherId = "shammi-g"
DisplayName = "ComfyUI_Text_Tools_SG"
Icon = "" 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility



